populated the lasagna page

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,5 +8,28 @@
 <body>
     <a href="../index.html">Home</a>
     <h1>Lasagna Recipe</h1>
+    <img src="../images/lasagna.jpeg" alt="Lasagna Image">
+    <h2>This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!</h2>
+    <p>Making lasagna can be time-consuming, but the results are well worth the wait.</p>
+    <p>You'll find a detailed ingredient list and step-by-step instructions in the recipe below.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Meat</li>
+        <li>Onion</li>
+        <li>Garlic</li>
+        <li>Tomato</li>
+        <li>Sugar</li>
+        <li>Cheeses</li>
+        <li>Egg</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Make the meat sauce.</li>
+        <li>Cook the noodles.</li>
+        <li>Make the ricotta mixture.</li>
+        <li>Layer the lasagna according to the recipe instructions.</li>
+        <li>Cover with foil and bake.</li>
+        <li>Let the lasagna rest before serving.</li>
+    </ol>
 </body>
 </html>
