--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-
-    <a href="recipes/lasagna.html">Lasagna Recipe</a>
+    <ul>
+        <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
+        <li><a href="recipes/pizza.html">Pizza Recipe</a></li>
+        <li><a href="recipes/shawarma.html">Pizza Recipe</a></li>
+    </ul>
 </body>
 </html>
